--- a/index.html
+++ b/index.html
@@ -211,9 +211,10 @@
             <span class="pill">Data Model</span>
           </div>
           <div class="card-actions">
-            <a class="btn" href="#cottonil-shots">Screenshots</a>
-            <a class="btn primary" href="https://app.powerbi.com/view?r=eyJrIjoiYjM4ZmE2ZWItMTgzMC00MDcwLWE5YjAtNGRlMWRhOWM5ODg3IiwidCI6IjJiYjZlNWJjLWMxMDktNDdmYi05NDMzLWMxYzZmNGZhMzNmZiIsImMiOjl9" target="_blank" rel="noreferrer">Live Dashboard</a>
+            <a class="link" href="project.html?p=cottonil&view=shots" target="_blank" rel="noreferrer">Screenshots</a>
+            <a class="link" href="project.html?p=cottonil&view=live" target="_blank" rel="noreferrer">Live Dashboard</a>
           </div>
+
 
         </article>
 
@@ -236,9 +237,10 @@
             <span class="pill">Data Modeling</span>
           </div>
           <div class="card-actions">
-            <a class="btn" href="#fleet-shots">Screenshots</a>
-            <a class="btn primary" href="https://app.powerbi.com/view?r=eyJrIjoiMjZhNWJkOGQtZDA0OS00YTRmLTlmNDYtNDg3MTJkOTAxNDgxIiwidCI6IjJiYjZlNWJjLWMxMDktNDdmYi05NDMzLWMxYzZmNGZhMzNmZiIsImMiOjl9" target="_blank" rel="noreferrer">Live Dashboard</a>
+            <a class="link" href="project.html?p=fleet&view=shots" target="_blank" rel="noreferrer">Screenshots</a>
+            <a class="link" href="project.html?p=fleet&view=live" target="_blank" rel="noreferrer">Live Dashboard</a>
           </div>
+
 
         </article>
 
@@ -402,6 +404,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
