--- a/index.html
+++ b/index.html
@@ -261,8 +261,10 @@
             <span class="pill">KPIs</span>
           </div>
           <div class="card-actions">
-            <a class="link" href="screenshots.html?p=pharma">Screenshots</a>
+            <a class="link" href="project.html?p=pharma&view=shots" target="_blank" rel="noreferrer">Screenshots</a>
+            <a class="link" href="project.html?p=pharma&view=live" target="_blank" rel="noreferrer">Live Dashboard</a>
           </div>
+
         </article>
 
         <article class="card tilt">
@@ -281,8 +283,10 @@
             <span class="pill">Power BI</span>
           </div>
           <div class="card-actions">
-            <a class="link" href="screenshots.html?p=airline">Screenshots</a>
+            <a class="link" href="project.html?p=airline&view=shots" target="_blank" rel="noreferrer">Screenshots</a>
+            <a class="link" href="project.html?p=airline&view=live" target="_blank" rel="noreferrer">Live Dashboard</a>
           </div>
+
         </article>
 
         <article class="card tilt">
@@ -404,6 +408,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
