--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <span class="pill">Dashboard</span>
           </div>
           <div class="card-actions">
-            <a class="link" href="screenshots.html?p=hr">Screenshots</a>
+            <a class="link" href="project.html?p=HR&view=shots" target="_blank" rel="noreferrer">Screenshots</a>
           </div>
         </article>
 
@@ -408,6 +408,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
