--- a/index.html
+++ b/index.html
@@ -305,8 +305,10 @@
             <span class="pill">Dashboard</span>
           </div>
           <div class="card-actions">
-            <a class="link" href="project.html?p=HR&view=shots" target="_blank" rel="noreferrer">Screenshots</a>
+            <a class="link" href="project.html?p=hr&view=shots" target="_blank" rel="noreferrer">Screenshots</a>
+            <a class="link" href="project.html?p=hr&view=live" target="_blank" rel="noreferrer">Live Dashboard</a>
           </div>
+
         </article>
 
         <article class="card tilt">
@@ -408,6 +410,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
