--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           <img class="card-img" src="assets/HR-1.png" alt="HR dashboard">
           <div class="card-top">
             <div class="card-title">HR Data Analysis</div>
-            <div class="tag">Client</div>
+            <div class="tag">Freelance</div>
           </div>
           <p class="card-desc">
             Untabular HR dataset
@@ -379,6 +379,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
