--- a/index.html
+++ b/index.html
@@ -107,9 +107,15 @@
       <div class="section-head">
         <h2>About</h2>
         <p>
-          I worked on real world datasets in sales, fleet management, aviation, retail, and healthcare
-          I translate business needs into insights and dashboards using Python, SQL, Excel, Power BI, and Tableau
+        I am a Data Analyst focused on turning data into clear and actionable decisions.
+        I work with real datasets and approach every project by understanding the problem before touching the tools.
+        My work emphasizes data quality validation thoughtful modeling and insight driven dashboards.
+        I aim to deliver analysis that supports decision making not just visualization.
         </p>
+        <p>
+        I believe good analysis starts with the right question not the right tool.
+        </p>
+
       </div>
 
       <div class="grid two">
@@ -198,12 +204,14 @@
             <div class="card-title">Cottonil Retail Analysis</div>
             <div class="tag">Freelance</div>
           </div>
-          <p class="card-desc">
-            Unstructured HTML exports with wrong structure
-            Built ETL and data model
-            Investigated outliers as business signals
-            Delivered multi page interactive dashboard
-          </p>
+          <ul class="bullets">
+            <li>Worked with unstructured HTML exports and incorrect data structure</li>
+            <li>Built a clean ETL process and data model from scratch</li>
+            <li>Analyzed outliers as business signals not data errors</li>
+            <li>Delivered a multi page interactive dashboard for decision making</li>
+            <li>Uncovered insights beyond the original client requirements</li>
+          </ul>
+
           <div class="card-meta">
             <span class="pill">Excel</span>
             <span class="pill">Power BI</span>
@@ -224,13 +232,14 @@
             <div class="card-title">Fleet Management Analysis</div>
             <div class="tag">Freelance</div>
           </div>
-          <p class="card-desc">
-            Data scattered across sheets
-            Linked vehicles by registration
-            Designed relationships for scalable analysis
-            KPIs for maintenance fuel and status
-            Second delivery focused on tables and KPI views
-          </p>
+          <ul class="bullets">
+            <li>Handled highly scattered and unstructured vehicle data across multiple sheets</li>
+            <li>Designed relationships based on vehicle registration numbers</li>
+            <li>Built a scalable data model to support future analysis</li>
+            <li>Analyzed maintenance fuel usage and vehicle status</li>
+            <li>Delivered two versions based on different decision needs</li>
+          </ul>
+
           <div class="card-meta">
             <span class="pill">Excel</span>
             <span class="pill">Power BI</span>
@@ -250,11 +259,13 @@
             <div class="card-title">Hospitals and Pharmacies Overview</div>
             <div class="tag">Freelance</div>
           </div>
-          <p class="card-desc">
-            SQL sourced data with partial dummy data
-            Built overview KPIs and dashboards
-            Led to more dashboard contracts after delivery
-          </p>
+          <ul class="bullets">
+            <li>Worked with SQL sourced data including partial dummy datasets</li>
+            <li>Built overview KPIs for hospitals and pharmacy operations</li>
+            <li>Designed dashboards focused on executive level monitoring</li>
+            <li>Initial delivery led to additional dashboard contracts</li>
+          </ul>
+
           <div class="card-meta">
             <span class="pill">SQL</span>
             <span class="pill">Power BI</span>
@@ -273,11 +284,13 @@
             <div class="card-title">Airline Ticket Pricing Analysis</div>
             <div class="tag">Freelance</div>
           </div>
-          <p class="card-desc">
-            Pricing dataset across months and currencies
-            Analyzed pricing behavior and purchase rate
-            Delivered interactive dashboard based on client requests
-          </p>
+          <ul class="bullets">
+            <li>Analyzed airline ticket pricing data across multiple months</li>
+            <li>Handled pricing calculations across different currencies</li>
+            <li>Studied purchase behavior and pricing trends</li>
+            <li>Delivered an interactive dashboard tailored to client requests</li>
+          </ul>
+
           <div class="card-meta">
             <span class="pill">Excel</span>
             <span class="pill">Power BI</span>
@@ -295,11 +308,13 @@
             <div class="card-title">HR Data Analysis</div>
             <div class="tag">Freelance</div>
           </div>
-          <p class="card-desc">
-            Untabular HR dataset
-            Restructured for analysis and future reporting
-            Built interactive Excel dashboard and delivered successfully
-          </p>
+          <ul class="bullets">
+            <li>Worked with untabular and poorly structured HR data</li>
+            <li>Restructured the dataset to support analysis and future reporting</li>
+            <li>Built an interactive Excel dashboard for HR insights</li>
+            <li>Delivered the project successfully to the client</li>
+          </ul>
+
           <div class="card-meta">
             <span class="pill">Excel</span>
             <span class="pill">Dashboard</span>
@@ -316,10 +331,12 @@
             <div class="card-title">Football Match Web Scraper</div>
             <div class="tag">Training</div>
           </div>
-          <p class="card-desc">
-            Scrapes match and tournament data by date
-            Exports structured CSV ready for analysis
-          </p>
+          <ul class="bullets">
+            <li>Built a Python scraper to extract match and tournament data by date</li>
+            <li>Converted raw web data into structured CSV files</li>
+            <li>Designed the output to be analysis ready</li>
+          </ul>
+
           <div class="card-meta">
             <span class="pill">Python</span>
             <span class="pill">Requests</span>
@@ -379,6 +396,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
