--- a/index.html
+++ b/index.html
@@ -107,13 +107,14 @@
       <div class="section-head">
         <h2>About</h2>
         <p>
-        I am a Data Analyst focused on turning data into clear and actionable decisions.
-        I work with real datasets and approach every project by understanding the problem before touching the tools.
-        My work emphasizes data quality validation thoughtful modeling and insight driven dashboards.
-        I aim to deliver analysis that supports decision making not just visualization.
+          I am a Data Analyst focused on turning data into clear and actionable decisions.<br>
+          I work with real datasets and approach every project by understanding the problem before touching the tools.<br>
+          My work emphasizes data quality validation thoughtful modeling and insight driven dashboards.<br>
+          I aim to deliver analysis that supports decision making not just visualization.
         </p>
+        
         <p>
-        I believe good analysis starts with the right question not the right tool.
+          I believe good analysis starts with the right question not the right tool.
         </p>
 
       </div>
@@ -396,6 +397,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
