--- a/index.html
+++ b/index.html
@@ -106,18 +106,18 @@
     <section id="about" class="section container reveal">
       <div class="section-head">
         <h2>About</h2>
-        <p>
-          I am a Data Analyst focused on turning data into clear and actionable decisions.<br>
-          I work with real datasets and approach every project by understanding the problem before touching the tools.<br>
-          My work emphasizes data quality validation thoughtful modeling and insight driven dashboards.<br>
-          I aim to deliver analysis that supports decision making not just visualization.
-        </p>
+        <div class="panel about-card">
+          <p class="about-lines">
+            I am a Data Analyst focused on turning data into clear and actionable decisions.<br>
+            I work with real datasets and approach every project by understanding the problem before touching the tools.<br>
+            My work emphasizes data quality validation thoughtful modeling and insight driven dashboards.<br>
+            I aim to deliver analysis that supports decision making not just visualization.
+          </p>
         
-        <p>
-          I believe good analysis starts with the right question not the right tool.
-        </p>
-
-      </div>
+          <p class="about-quote">
+            I believe good analysis starts with the right question not the right tool.
+          </p>
+        </div>
 
       <div class="grid two">
         <div class="panel tilt">
@@ -397,6 +397,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
