--- a/index.html
+++ b/index.html
@@ -358,13 +358,24 @@
 
       <div class="grid two">
         <div class="panel tilt">
-          <h3>Diploma</h3>
-          <p>Data Analysis Diploma from Mazen Analytics</p>
-        </div>
-        <div class="panel tilt">
-          <h3>DataCamp</h3>
+        <h3>Diploma</h3>
+        <p>Data Analysis Diploma from Mazen Analytics</p>
+      
+        <div class="card-actions">
+          <a class="link" href="assets/mazen-diploma.pdf" target="_blank" rel="noreferrer">View Certificate</a>
         </div>
       </div>
+
+        <div class="panel tilt">
+        <h3>DataCamp</h3>
+        <p>Selected certificate preview</p>
+      
+        <div class="card-actions">
+          <a class="link" href="assets/Introduction_to_Python.pdf" target="_blank" rel="noreferrer">View Certificate</a>
+          <a class="link" href="certificates.html" target="_blank" rel="noreferrer">View All Certificates</a>
+        </div>
+      </div>
+
     </section>
 
     <section id="contact" class="section container reveal">
@@ -397,6 +408,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
