--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         </a>
       
         <div class="card-actions">
-          <a class="link" href="assets/mazen-diploma.pdf" target="_blank" rel="noreferrer">Open PDF</a>
+          <a class="link" href="pdf-viewer.html?file=assets/mazen-diploma.pdf&title=Mazen%20Analytics%20Diploma" target="_blank" rel="noreferrer">View Full</a>
         </div>
       </div>
 
@@ -380,7 +380,7 @@
         </a>
       
         <div class="card-actions">
-          <a class="link" href="assets/Introduction_to_Python.pdf" target="_blank" rel="noreferrer">Open PDF</a>
+          <a class="link" href="pdf-viewer.html?file=assets/Introduction_to_Python.pdf&title=Introduction%20to%20Python" target="_blank" rel="noreferrer">View Full</a>
           <a class="link" href="certificates.html" target="_blank" rel="noreferrer">View All Certificates</a>
         </div>
       </div>
@@ -418,6 +418,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
