--- a/pdf-viewer.html
+++ b/pdf-viewer.html
@@ -1,44 +1,19 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Certificate Viewer | Saif Ghonem</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+<script>
+  const p = new URLSearchParams(location.search);
 
-<body>
-  <main class="page">
-    <section class="section container">
-      <div class="section-head">
-        <h2 id="vTitle">Certificate</h2>
-        <p><a class="link" href="index.html#certs">Back to Certifications</a></p>
-      </div>
+  const rawFile = p.get("file") || "";
+  const rawTitle = p.get("title") || "Certificate";
 
-      <div class="panel">
-        <div class="embed">
-          <iframe
-            id="pdfFrame"
-            title="PDF"
-            src=""
-            loading="lazy"
-            referrerpolicy="no-referrer"
-            style="width:100%; height:80vh; border:0; border-radius:16px;">
-          </iframe>
-        </div>
-      </div>
-    </section>
-  </main>
+  const file = decodeURIComponent(rawFile);
+  const title = decodeURIComponent(rawTitle);
 
-  <script>
-    const p = new URLSearchParams(location.search);
-    const file = p.get("file") || "";
-    const title = p.get("title") || "Certificate";
+  document.getElementById("vTitle").textContent = title;
 
-    document.getElementById("vTitle").textContent = title;
+  const frame = document.getElementById("pdfFrame");
 
-    const frame = document.getElementById("pdfFrame");
+  if (!file) {
+    frame.outerHTML = "<div class='note'>No file selected</div>";
+  } else {
     frame.src = file;
-  </script>
-</body>
-</html>
+  }
+</script>
