--- a/pdf-viewer.html
+++ b/pdf-viewer.html
@@ -1,19 +1,65 @@
-<script>
-  const p = new URLSearchParams(location.search);
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Certificate Viewer | Saif Ghonem</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-  const rawFile = p.get("file") || "";
-  const rawTitle = p.get("title") || "Certificate";
+<body>
+  <main class="page">
+    <section class="section container">
+      <div class="section-head">
+        <h2 id="vTitle">Certificate</h2>
+        <p>
+          <a class="link" href="index.html#certs">Back to Certifications</a>
+          <span class="dot"></span>
+          <a class="link" id="openDirect" href="#" target="_blank" rel="noreferrer">Open PDF Direct</a>
+        </p>
+      </div>
 
-  const file = decodeURIComponent(rawFile);
-  const title = decodeURIComponent(rawTitle);
+      <div class="panel">
+        <iframe
+          id="pdfFrame"
+          title="PDF"
+          src=""
+          loading="lazy"
+          referrerpolicy="no-referrer"
+          style="width:100%;height:80vh;border:0;border-radius:16px;background:rgba(7,10,16,0.25);">
+        </iframe>
 
-  document.getElementById("vTitle").textContent = title;
+        <div class="note" id="status"></div>
+      </div>
+    </section>
+  </main>
 
-  const frame = document.getElementById("pdfFrame");
+  <script>
+    const p = new URLSearchParams(location.search);
 
-  if (!file) {
-    frame.outerHTML = "<div class='note'>No file selected</div>";
-  } else {
-    frame.src = file;
-  }
-</script>
+    const rawFile = p.get("file") || "";
+    const rawTitle = p.get("title") || "Certificate";
+
+    const file = decodeURIComponent(rawFile);
+    const title = decodeURIComponent(rawTitle);
+
+    const titleEl = document.getElementById("vTitle");
+    const frame = document.getElementById("pdfFrame");
+    const status = document.getElementById("status");
+    const openDirect = document.getElementById("openDirect");
+
+    titleEl.textContent = title;
+
+    if (!file) {
+      status.textContent = "Missing file parameter.";
+    } else {
+      openDirect.href = file;
+      status.textContent = "Loading PDF...";
+      frame.src = file;
+      frame.addEventListener("load", () => {
+        status.textContent = "";
+      });
+    }
+  </script>
+</body>
+</html>
