--- a/pdf-viewer.html
+++ b/pdf-viewer.html
@@ -19,7 +19,7 @@
         </p>
       </div>
 
-      <div class="panel">
+      <div class="panel pdf-panel">
         <iframe
           id="pdfFrame"
           title="PDF"
