--- a/pdf-viewer.html
+++ b/pdf-viewer.html
@@ -9,7 +9,7 @@
 
 <body>
   <main class="page">
-    <section class="section container">
+    <section class="section container wide">
       <div class="section-head">
         <h2 id="vTitle">Certificate</h2>
         <p>
