--- a/certificates.html
+++ b/certificates.html
@@ -3,54 +3,53 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Certificates | Saif Ghonem</title>
+  <title>Certifications | Saif Ghonem</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+  <div id="bg3d" aria-hidden="true"></div>
+
   <header class="nav">
     <div class="nav-inner">
-      <a class="brand" href="index.html#certs">Saif Ghonem</a>
-
+      <a class="brand" href="index.html">Saif Ghonem</a>
       <nav class="nav-links">
         <a href="index.html#projects">Projects</a>
-        <a href="index.html#certs">Certifications</a>
         <a href="index.html#contact">Contact</a>
       </nav>
-
       <button class="nav-toggle" id="navToggle" aria-label="Open menu">
         <span></span><span></span><span></span>
       </button>
     </div>
-
     <div class="nav-mobile" id="navMobile">
       <a href="index.html#projects">Projects</a>
-      <a href="index.html#certs">Certifications</a>
       <a href="index.html#contact">Contact</a>
     </div>
   </header>
 
   <main class="page">
-    <section class="section container">
+    <section class="section container reveal">
       <div class="section-head">
-        <h2>DataCamp Certificates</h2>
-        <p>All certificates</p>
-      </div>
-
-      <div class="cards" id="certGrid"></div>
-    </section>
-
-    <footer class="footer container">
-      <div class="footer-row">
-        <div>© <span id="year"></span> Saif Mohamed Ghonem</div>
-        <div class="footer-links">
-          <a href="index.html#certs">Back</a>
-          <a href="index.html#contact">Contact</a>
+        <h2>Certifications</h2>
+        <p>A collection of my professional certifications in Data Analysis, SQL, and Business Intelligence.</p>
+        <div style="margin-top: 15px;">
+          <a class="link" href="index.html">← Back to Home</a>
         </div>
       </div>
-    </footer>
+
+      <div class="cards" id="certGrid">
+        <p style="color: var(--muted);">Loading certificates...</p>
+      </div>
+    </section>
   </main>
 
-  <script src="certificates.js?v=1" defer></script>
+  <footer class="footer container">
+    <div class="footer-row">
+      <div>© <span id="year"></span> Saif Ghonem</div>
+    </div>
+  </footer>
+
+  <script src="certificates.js" defer></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
