--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
     <section class="hero container">
       <div class="hero-left">
         <div class="badge">Data Analyst</div>
+        <div class="availability" aria-label="Available for freelance work">
+          <span class="avail-dot" aria-hidden="true"></span>
+          <span>Available for freelance work</span>
+        </div>
 
         <h1>Saif Mohamed Ghonem</h1>
 
@@ -75,7 +79,14 @@
       </div>
 
       <div class="hero-right">
-        <div class="glass-card">
+        <div class="hero-right-grid">
+          <div class="portrait-card">
+            <div class="portrait-frame">
+              <img src="assets/me.png" alt="Saif Mohamed Ghonem portrait" loading="eager" />
+            </div>
+          </div>
+
+          <div class="glass-card">
           <div class="glass-title">What I deliver</div>
           <ul class="bullets">
             <li>Clean data models that scale</li>
@@ -100,6 +111,7 @@
           </div>
 
           <div class="hint"></div>
+          </div>
         </div>
       </div>
     </section>
@@ -122,7 +134,10 @@
 
       <div class="grid two">
         <div class="panel tilt">
-          <h3>Mindset</h3>
+          <div class="panel-head">
+            <span class="panel-ic" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M12 2a7 7 0 0 0-4 12v3h8v-3a7 7 0 0 0-4-12z" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/><path d="M9 20h6" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/></svg></span>
+            <h3>Mindset</h3>
+          </div>
           <ul class="bullets">
             <li>I approach data with a decision first mindset</li>
             <li>Every analysis starts with a business question</li>
@@ -134,7 +149,10 @@
         </div>
 
         <div class="panel tilt">
-          <h3>Current</h3>
+          <div class="panel-head">
+            <span class="panel-ic" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M8 7h8M8 11h8M8 15h5" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/><path d="M6 3h12a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z" fill="none" stroke="currentColor" stroke-width="1.6"/></svg></span>
+            <h3>Current</h3>
+          </div>
         
           <ul class="bullets">
             <li>Freelance Data Analyst</li>
@@ -153,7 +171,10 @@
 
       <div class="grid three">
         <div class="panel tilt">
-          <h3>Technical</h3>
+          <div class="panel-head">
+            <span class="panel-ic" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M4 7h16M8 7v10m8-10v10M6 17h12" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/></svg></span>
+            <h3>Technical</h3>
+          </div>
           <div class="chips">
             <span class="chip">Python</span>
             <span class="chip">SQL</span>
@@ -164,7 +185,10 @@
         </div>
 
         <div class="panel tilt">
-          <h3>Data Skills</h3>
+          <div class="panel-head">
+            <span class="panel-ic" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M4 19V5m0 14h16M8 15l3-3 3 2 4-5" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg></span>
+            <h3>Data Skills</h3>
+          </div>
           <div class="chips">
             <span class="chip">Data Cleaning</span>
             <span class="chip">EDA</span>
@@ -176,7 +200,10 @@
         </div>
 
         <div class="panel tilt">
-          <h3>Tools</h3>
+          <div class="panel-head">
+            <span class="panel-ic" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M14 7l3 3-7 7H7v-3l7-7z" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/><path d="M13 6l1-1 4 4-1 1" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/></svg></span>
+            <h3>Tools</h3>
+          </div>
           <div class="chips">
             <span class="chip">Pandas</span>
             <span class="chip">NumPy</span>
@@ -392,21 +419,69 @@
     </section>
 
     <section id="contact" class="section container reveal">
-      <div class="section-head">
-        <h2>Contact</h2>
-        <p>Fast ways to reach me</p>
+      <div class="section-head center">
+        <h2>Let’s Connect</h2>
+        <p>Have a project or need analysis support? Reach me through any channel.</p>
       </div>
 
-      <div class="contact">
-        <a class="btn primary" href="mailto:saifghonem90@gmail.com">Email</a>
-        <a class="btn" href="https://www.linkedin.com/in/saif-ghonem-a54b672aa/" target="_blank" rel="noreferrer">LinkedIn</a>
-        <a class="btn" href="https://github.com/SaifGhonem" target="_blank" rel="noreferrer">GitHub</a>
-        <a class="btn" href="https://api.whatsapp.com/send?phone=201018577813" target="_blank" rel="noreferrer">WhatsApp</a>
-        <a class="btn" href="https://linktr.ee/saifghonem" target="_blank" rel="noreferrer">Linktree</a>
+      <div class="contact-grid">
+        <a class="contact-card" href="https://maps.google.com/?q=Mansoura%2C%20Egypt" target="_blank" rel="noreferrer">
+          <span class="contact-ic" aria-hidden="true">
+            <svg viewBox="0 0 24 24"><path d="M12 21s7-5 7-11a7 7 0 0 0-14 0c0 6 7 11 7 11z" fill="none" stroke="currentColor" stroke-width="1.6"/><path d="M12 10.5a2.2 2.2 0 1 0 0 .01" fill="none" stroke="currentColor" stroke-width="1.6"/></svg>
+          </span>
+          <span class="contact-txt">
+            <span class="contact-title">Location</span>
+            <span class="contact-sub">Mansoura, Egypt</span>
+          </span>
+        </a>
+
+        <a class="contact-card" href="mailto:saifghonem90@gmail.com">
+          <span class="contact-ic" aria-hidden="true">
+            <svg viewBox="0 0 24 24"><path d="M4 6h16v12H4z" fill="none" stroke="currentColor" stroke-width="1.6"/><path d="M4 7l8 6 8-6" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/></svg>
+          </span>
+          <span class="contact-txt">
+            <span class="contact-title">Email</span>
+            <span class="contact-sub">saifghonem90@gmail.com</span>
+          </span>
+        </a>
+
+        <a class="contact-card" href="https://api.whatsapp.com/send?phone=201018577813" target="_blank" rel="noreferrer">
+          <span class="contact-ic" aria-hidden="true">
+            <svg viewBox="0 0 24 24"><path d="M20 11.5a8.5 8.5 0 0 1-12.7 7.4L4 20l1.1-3.1A8.5 8.5 0 1 1 20 11.5z" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/><path d="M8.5 9.5c.4 1.2 1.8 2.7 3 3.1.5.2 1 .1 1.4-.2l.8-.6c.3-.2.7-.2 1 0l1.2.8" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          </span>
+          <span class="contact-txt">
+            <span class="contact-title">WhatsApp</span>
+            <span class="contact-sub">+20 10 1857 7813</span>
+          </span>
+        </a>
       </div>
+
+      <div class="social-row" aria-label="Social links">
+        <a class="social-ic" href="https://github.com/SaifGhonem" target="_blank" rel="noreferrer" aria-label="GitHub">
+          <svg viewBox="0 0 24 24"><path d="M9 19c-4 1.5-4-2.5-5-3m10 6v-3.2c0-.9.3-1.6.8-2-2.7-.3-5.5-1.3-5.5-5.8 0-1.3.5-2.4 1.2-3.2-.1-.3-.5-1.5.1-3.1 0 0 1-.3 3.3 1.2a11 11 0 0 1 6 0C19.2 4.4 20.2 4.7 20.2 4.7c.6 1.6.2 2.8.1 3.1.8.8 1.2 1.9 1.2 3.2 0 4.5-2.8 5.5-5.5 5.8.4.4.8 1.1.8 2.2V22" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg>
+        </a>
+
+        <a class="social-ic" href="https://www.linkedin.com/in/saif-ghonem-a54b672aa/" target="_blank" rel="noreferrer" aria-label="LinkedIn">
+          <svg viewBox="0 0 24 24"><path d="M6 9v12M6 6.5a1.5 1.5 0 1 0 0 .01M10 21v-7a4 4 0 0 1 8 0v7" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
+        </a>
+
+        <a class="social-ic" href="mailto:saifghonem90@gmail.com" aria-label="Email">
+          <svg viewBox="0 0 24 24"><path d="M4 6h16v12H4z" fill="none" stroke="currentColor" stroke-width="1.6"/><path d="M4 7l8 6 8-6" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/></svg>
+        </a>
+
+        <a class="social-ic" href="https://linktr.ee/saifghonem" target="_blank" rel="noreferrer" aria-label="Linktree">
+          <svg viewBox="0 0 24 24"><path d="M12 2v20M5 7l7 5 7-5" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M8 22l4-6 4 6" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
+        </a>
+      </div>
+
+      <a class="cta-wide" href="mailto:saifghonem90@gmail.com">Start a Conversation</a>
     </section>
 
-    <footer class="footer container">
+    <div class="divider container" aria-hidden="true">
+      <span class="divider-dot"></span>
+    </div>
+
+    <footer class="footer container"> class="footer container">
       <div class="footer-row">
         <div>© <span id="year"></span> Saif Mohamed Ghonem</div>
         <div class="footer-links">
@@ -421,7 +496,6 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
-
 
 
 
