--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         </a>
         <a class="nav-ic" href="https://api.whatsapp.com/send?phone=201018577813" target="_blank" rel="noreferrer" aria-label="WhatsApp">
           <svg viewBox="0 0 24 24" aria-hidden="true">
-            <path d="M21 15a4 4 0 01-4 4H8l-5 3V7a4 4 0 014-4h10a4 4 0 014 4z" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M20 11.5a7.5 7.5 0 0 1-11.2 6.6L4 19l1-4.5A7.5 7.5 0 1 1 20 11.5z" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M9.2 9.1c.2-.5.4-.5.7-.5h.6c.2 0 .4.1.5.4l.5 1.2c.1.2.1.4 0 .6l-.3.5c-.1.2-.1.4.1.6.4.6 1 1.2 1.6 1.6.2.1.4.1.6-.1l.5-.3c.2-.1.4-.1.6 0l1.2.5c.3.1.4.3.4.5v.6c0 .3 0 .5-.5.7-.4.2-1.4.5-2.7 0-1.4-.5-3.3-2.3-4-4-.5-1.3-.2-2.3 0-2.7z" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </a>
       </div>
@@ -423,7 +424,7 @@
     <section class="ready container reveal">
       <h2>Ready to Collaborate?</h2>
       <p>Let’s build analysis that supports decisions and moves the business.</p>
-      <a class="btn ready-btn" href="#contact">Start a Project<span class="arrow" aria-hidden="true">→</span></a>
+      <a class="btn ready-btn" href="mailto:saifghonem90@gmail.com">Start a Project<span class="arrow" aria-hidden="true">→</span></a>
     </section>
 
     <section id="contact" class="section container reveal">
@@ -487,13 +488,14 @@
         </a>
         <a class="social-btn" href="https://api.whatsapp.com/send?phone=201018577813" target="_blank" rel="noreferrer" aria-label="WhatsApp">
           <svg viewBox="0 0 24 24" aria-hidden="true">
-            <path d="M21 15a4 4 0 01-4 4H8l-5 3V7a4 4 0 014-4h10a4 4 0 014 4z" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M20 11.5a7.5 7.5 0 0 1-11.2 6.6L4 19l1-4.5A7.5 7.5 0 1 1 20 11.5z" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M9.2 9.1c.2-.5.4-.5.7-.5h.6c.2 0 .4.1.5.4l.5 1.2c.1.2.1.4 0 .6l-.3.5c-.1.2-.1.4.1.6.4.6 1 1.2 1.6 1.6.2.1.4.1.6-.1l.5-.3c.2-.1.4-.1.6 0l1.2.5c.3.1.4.3.4.5v.6c0 .3 0 .5-.5.7-.4.2-1.4.5-2.7 0-1.4-.5-3.3-2.3-4-4-.5-1.3-.2-2.3 0-2.7z" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </a>
       </div>
 
 
-      <a class="btn primary contact-cta" href="mailto:saifghonem90@gmail.com">Start a Conversation<span class="arrow" aria-hidden="true">→</span></a>
+      <a class="btn primary contact-cta" href="https://api.whatsapp.com/send?phone=201018577813" target="_blank" rel="noreferrer">Start a Conversation<span class="arrow" aria-hidden="true">→</span></a>
     </section>
 
 
