--- a/index.html
+++ b/index.html
@@ -486,10 +486,9 @@
             <path d="M22 6l-10 7L2 6" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </a>
-        <a class="social-btn" href="https://api.whatsapp.com/send?phone=201018577813" target="_blank" rel="noreferrer" aria-label="WhatsApp">
-          <svg viewBox="0 0 24 24" aria-hidden="true">
-            <path d="M20 11.5a7.5 7.5 0 0 1-11.2 6.6L4 19l1-4.5A7.5 7.5 0 1 1 20 11.5z" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M9.2 9.1c.2-.5.4-.5.7-.5h.6c.2 0 .4.1.5.4l.5 1.2c.1.2.1.4 0 .6l-.3.5c-.1.2-.1.4.1.6.4.6 1 1.2 1.6 1.6.2.1.4.1.6-.1l.5-.3c.2-.1.4-.1.6 0l1.2.5c.3.1.4.3.4.5v.6c0 .3 0 .5-.5.7-.4.2-1.4.5-2.7 0-1.4-.5-3.3-2.3-4-4-.5-1.3-.2-2.3 0-2.7z" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
+        <a class="social-btn" href="https://wa.me/201018577813" target="_blank" rel="noreferrer" aria-label="WhatsApp">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path>
           </svg>
         </a>
       </div>
@@ -516,6 +515,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
