--- a/index.html
+++ b/index.html
@@ -489,9 +489,9 @@
         <a class="social-btn" href="https://wa.me/201018577813" target="_blank" rel="noreferrer" aria-label="WhatsApp">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path>
+            <path d="M16 13c-.2-.1-1.1-.5-1.3-.6-.2-.1-.3-.1-.5.1-.1.3-.5.6-.6.8-.1.1-.2.2-.5.1-.3-.1-1.1-.4-2.1-1.3-.8-.7-1.3-1.5-1.5-1.8-.1-.3 0-.4.1-.6.1-.1.3-.3.4-.5.1-.1.1-.3.2-.4 0-.2 0-.3-.1-.5l-.7-1.7c-.2-.5-.4-.4-.5-.4h-.5c-.2 0-.5.1-.7.3-.3.4-.8.9-.8 2.2 0 1.3.9 2.5 1 2.7.1.2 1.8 2.8 4.4 3.9.6.3 1.1.4 1.5.6.6.2 1.2.2 1.6.1.5-.1 1.5-.6 1.7-1.2.2-.6.2-1.1.1-1.2-.1-.1-.3-.2-.6-.3z"></path>
           </svg>
         </a>
-      </div>
 
 
       <a class="btn primary contact-cta" href="https://api.whatsapp.com/send?phone=201018577813" target="_blank" rel="noreferrer">Start a Conversation<span class="arrow" aria-hidden="true">→</span></a>
@@ -515,6 +515,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
