--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
 
       <div class="grid two">
         <div class="panel tilt">
-        <h3>Diploma</h3>
-        <p>Data Analysis Diploma from Mazen Analytics</p>
+        <h3>Data Analysis Diploma from Mazen Analytics</h3>
+        
       
         <a class="cert-preview" href="pdf-viewer.html?file=assets/mazen-diploma.pdf&title=Mazen%20Analytics%20Diploma" target="_blank" rel="noreferrer">
           <img class="cert-img" src="assets/mazen-diploma.png" alt="Mazen Analytics Diploma">
@@ -517,6 +517,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
