--- a/pdf-viewer.html
+++ b/pdf-viewer.html
@@ -15,7 +15,8 @@
         <p>
           <a class="link" href="index.html#certs">Back to Certifications</a>
           <span class="dot"></span>
-          <a class="link" id="openDirect" href="#" target="_blank" rel="noreferrer">Open PDF Direct</a>
+          <a class="link" id="openDirect" href="#" target="_blank" rel="noreferrer">Open PDF Direct
+          </a>
         </p>
       </div>
 
